--- a/vignettes/assembly.Rmd
+++ b/vignettes/assembly.Rmd
@@ -20,9 +20,9 @@ Following food web terminology, I talk here about _resources_ and _consumers_. I
 
 I show an example workflow that is composed of the following steps:
 
-  1. draw random species from a metaweb
-  2. impose resource filtering, i.e. each basal species must be consumed and each consumer must feed on a resource.
-  3. impose limiting similarity filtering, i.e. consumers are constantly replaced by others following a probability distribution proportional to their similarity of interactions. 
+1. draw random species from a metaweb
+2. impose resource filtering, i.e. each basal species must be consumed and each consumer must feed on a resource.
+3. impose limiting similarity filtering, i.e. consumers are constantly replaced by others following a probability distribution proportional to their similarity of interactions. 
 
 ## Draw random species from a metaweb
 
@@ -82,32 +82,32 @@ In general, there is no need to check this, as if this is not the case `resource
 
 For 50 local communities I:
 
-  1. draw random species
-  2. apply the resource filtering procedure
-  3. calculate the trophic level of the species in the local communities
-  4. I calculate average and maximum trophic levels within each community
+1. draw random species
+2. apply the resource filtering procedure
+3. calculate the trophic level of the species in the local communities
+4. I calculate average and maximum trophic levels within each community
 
 ```{r trolev}
-TL_random <- matrix(NA, S, 50)
-TL_resource <- matrix(NA, S, 50)
-for (i in seq_len(50)) {
-  sp <- draw_random_species(S, colnames(adirondack))
-  sp_resource <- resource_filtering(sp, adirondack, keep.n.basal = TRUE)
-  TL_random[, i] <- ATNr::TroLev(adirondack[sp, sp])[, 1]
-  TL_resource[, i] <- ATNr::TroLev(adirondack[sp_resource, sp_resource])[, 1]
-}
-plot(colMeans(TL_random), colMeans(TL_resource),
-     xlim = c(1.1, 2.2), ylim = c(1.1, 2.2),
-     main = "Average trophic level",
-     xlab = "Random communities",
-     ylab = "Resource filtered communities")
-abline(0, 1)
-plot(apply(TL_random, 2, max), apply(TL_resource, 2, max),
-     xlim = c(2.2, 9.2), ylim = c(2.2, 9.2),
-     main = "Maximum trophic level",
-     xlab = "Random communities",
-     ylab = "Resource filtered communities")
-abline(0, 1)
+# TL_random <- matrix(NA, S, 50)
+# TL_resource <- matrix(NA, S, 50)
+# for (i in seq_len(50)) {
+#   sp <- draw_random_species(S, colnames(adirondack))
+#   sp_resource <- resource_filtering(sp, adirondack, keep.n.basal = TRUE)
+#   TL_random[, i] <- ATNr::TroLev(adirondack[sp, sp])[, 1]
+#   TL_resource[, i] <- ATNr::TroLev(adirondack[sp_resource, sp_resource])[, 1]
+# }
+# plot(colMeans(TL_random), colMeans(TL_resource),
+#      xlim = c(1.1, 2.2), ylim = c(1.1, 2.2),
+#      main = "Average trophic level",
+#      xlab = "Random communities",
+#      ylab = "Resource filtered communities")
+# abline(0, 1)
+# plot(apply(TL_random, 2, max), apply(TL_resource, 2, max),
+#      xlim = c(2.2, 9.2), ylim = c(2.2, 9.2),
+#      main = "Maximum trophic level",
+#      xlab = "Random communities",
+#      ylab = "Resource filtered communities")
+# abline(0, 1)
 ```
 
 Trophic level tend to be higher in resource-filtered communities compared to random communities. This is due to isolated consumers (trophic level = 1) in the random communities and that were replaced by connected consumers when imposing resource filtering. It's also evident when computing the number of connected components:
@@ -119,3 +119,4 @@ assembly:::.components(sp, adirondack)
 show_fw(sp_resource, adirondack)
 assembly:::.components(sp_resource, adirondack)
 ```
+
