remove old figures and add zenodo badge

--- a/README.Rmd
+++ b/README.Rmd
@@ -5,6 +5,9 @@ bibliography: references.bib
 
 <!-- badges: start -->
 [![R-CMD-check](https://github.com/emilio-berti/assembly/workflows/R-CMD-check/badge.svg)](https://github.com/emilio-berti/assembly/actions)
+
+[![DOI](https://zenodo.org/badge/454057297.svg)](https://zenodo.org/badge/latestdoi/454057297)
+
 <!-- badges: end -->
 
 
@@ -29,7 +32,7 @@ knitr::opts_chunk$set(
 
 Following food web terminology, I talk here about _resources_ and _consumers_. In the case of plant-pollinator networks, this is analogous as replacing _resource_ with _plant_ and _consumers_ with _pollinator_. In this case, however, some filtering steps may be unnecessary and unwanted. __More about this in a separate section.__ I also talk about metawebs, which are the regional food web networks that emerge considering all interactions that occur in local communities within the region of interest.
 
-The general scope of _assembly_ is to simulate top-down assembly processes. Top-down assembly means that all species are introduced into a local community at once. The opposite, i.e. communities are built by sequential introductions of one species, is called bottom-up assembly. Bottom-up assembly is problematic for community composed of many species, as the number of unique assembly sequences is $S!$, where $S$ is the number of species in the metaweb. For 100 species, for instance, there are $\sim 10^{157}$ unique sequences, making computations (and replications) virtually impossible. Strikingly, @servan2021tractable showed that bottop-up and top-down assembly are equivalent under some specific conditions. 
+The general scope of _assembly_ is to simulate top-down assembly processes. Top-down assembly means that all species are introduced into a local community at once. The opposite, i.e. communities are built by sequential introductions of one species, is called bottom-up assembly. Bottom-up assembly is problematic for community composed of many species, as the number of unique assembly sequences is _S!_, where _S_ is the number of species in the metaweb. For 100 species, for instance, there are $\sim 10^{157}$ unique sequences, making computations (and replications) virtually impossible. Strikingly, @servan2021tractable showed that bottop-up and top-down assembly are equivalent under some specific conditions. 
 
 Far from assuming this is the case in _assembly_, I simply want to highlight that _assembly_ only implements top-down assembly and that none of the procedures in _assembly_ can be considered steps in an ecological sequence. Whenever I talk about _steps_, _moves_, and _sequences_ in _assembly_, I always refer to _procedures steps_, _procedures moves_, and _procedures sequences_. Always keep that in mind and don't be fooled by the terminology; there is no bottom-up assembly in _assembly_.
 
@@ -190,7 +193,7 @@ show_graph(sp_sim, adirondack)
 To accept a move, it must pass a Metropolis-Hasting algorithm. If the similarity of the new community is lower than the similarity of the old one, the move is always accepted. When the new similarity is higher than the old similarity, the move is accepted if:
 
 $$
-e^{\left( 1 - \frac{similarity_{new}}{similarity_{old}} \right) \frac{1}{t}} > \mathcal{U}(0, 1)
+exp \left[ \left( 1 - \frac{similarity_{new}}{similarity_{old}} \right) \frac{1}{t} \right]> \mathcal{U}(0, 1)
 $$
 This means that, even when the new similarity is higher than the old one and the new community has species with increased similarity of interaction, it can still be accepted as a valid move based on a probability density function. The probability of acceptance depends on how much the new similarity is higher than the old one and by the temperature parameter _t_. For increasing _t_, it is more likely to accept a non-favorable move:
 
@@ -234,3 +237,4 @@ The reason to include this algorithm is to avoid a purely deterministic procedur
 ```{r tweak_t}
 table(sapply(seq_len(1000), \(x) metropolis.hastings(1, 1e3, t = 1e9)))
 ```
+# References
