--- a/references.bib
+++ b/references.bib
@@ -8,3 +8,11 @@
   year={2021},
   publisher={Wiley Online Library}
 }
+
+@article{bauer2022biotic,
+  title={Biotic filtering by species’ interactions constrains food-web variability across spatial and abiotic gradients},
+  author={Bauer, Barbara and Berti, Emilio and Ryser, Remo and Gauzens, Benoit and Hirt, Myriam R and Rosenbaum, Benjamin and Digel, Christoph and Ott, David and Scheu, Stefan and Brose, Ulrich},
+  journal={Ecology Letters},
+  year={2022},
+  publisher={Wiley Online Library}
+}
