--- a/README.Rmd
+++ b/README.Rmd
@@ -43,10 +43,10 @@ At this point, if you're like me, you will ask _why not bottom-up assembly?_ The
 
 In general, _assembly_ implements this pipeline:
 
-  1. Draw random species from a metaweb.
-  2. Impose resource filtering, i.e. each basal species must be consumed and each consumer must feed on a resource.
-  3. Impose limiting similarity filtering, i.e. consumers are replaced by others, depending on a probability distribution proportional to their similarity of interactions.
-  
+1. Draw random species from a metaweb.
+2. Impose resource filtering, i.e. each basal species must be consumed and each consumer must feed on a resource.
+3. Impose limiting similarity filtering, i.e. consumers are replaced by others, depending on a probability distribution proportional to their similarity of interactions.
+
 These steps are not necessarily sequential, i.e. limiting similarity can be imposed independently from the resource filtering, but this is programmatically harder. Because ecological communities are likely filtered by resource availability before interaction competition, I wrote _assembly_ in a way that is straightforward to pass the output of the resource filtering procedure to the limiting similarity one. It is, however, possible to omit/invert procedures by performing extra-checks on input/output data and implementing few pre-procedure steps. I will show how to implement some of them at the end.
 
 # Draw random species from a metaweb
@@ -141,7 +141,7 @@ assembly:::.components(sp, adirondack)
 
 Usually, a proper food web has only one component, i.e. all species are connected by a path. Having more than one component means that the food web is actually made of several disconnected communities. In the case above, it also means that at least one of this disconnected communities is composed of only one isolated species.
 
-# Resouce filtering
+# Resource filtering
 
 To impose the resource filtering, call the function `resource_filtering()`. This takes as input the species names (*sp.names*), the metaweb (*metaweb*), and an optional argument _keep.n.basal_ to specify weather the original number of basal species should be kept constant (default = `FALSE`). **NOTE this may not be implemented correctly**
 
@@ -173,9 +173,9 @@ assembly:::.move(sp_resource, adirondack, t = 1)
 
 The limiting similarity filtering is a series of individuals moves. Each move is composed of three steps:
 
-  1. A metric ($J$) representing the similarity of interaction is calculated for each species in the community.
-  2. One species is removed with probability proportional to their $J$.
-  3. The species removed is replaced by another species selected at random from the metaweb.
+1. A metric ($J$) representing the similarity of interaction is calculated for each species in the community.
+2. One species is removed with probability proportional to their $J$.
+3. The species removed is replaced by another species selected at random from the metaweb.
 
 Each move can then be accepted of discarded based on a probabilistic acceptance criterion, the Metropolis-Hasting algorithm (see below for details). If the move is accepted, the new community will differ from the starting one only in the removed/replaced species. If the move is discarded, the new community is identical to the starting one. Each move takes as input the community of the previous move (or the initial community for the first move) and returns as output the new community (or the original one). 
 
@@ -237,4 +237,111 @@ The reason to include this algorithm is to avoid a purely deterministic procedur
 ```{r tweak_t}
 table(sapply(seq_len(1000), \(x) metropolis.hastings(1, 1e3, t = 1e9)))
 ```
+
+# Integrating food web dynamics
+
+Until now, we focused on assembly processes and how this influence the topology of the network. It is possible to integrate the assembly with food web dynamics, e.g. comparing dynamics between filtering processes. I collaborated to the _ATNr_ package to solve food web dynamical systems.
+
+Create a synthetic metaweb with virtual species:
+
+```{r traits}
+library(ATNr)
+
+S <- 200
+
+traits <- data.frame(
+  species = sapply(seq_len(S), \(x){
+    paste(sample(letters, 10, replace = TRUE), collapse = "")
+  }),
+  masses = 10 ^ runif(S, 0, 2), #log-uniform
+  biomasses = runif(S, 2, 5),
+  role = sapply(seq_len(S), \(x) ifelse(runif(1) > .7, "basal", "consumer"))
+)
+
+traits <- traits[order(traits$masses), ]
+
+metaweb <- create_Lmatrix(traits$masses,
+                          sum(traits$role == "basal"),
+                          Ropt = 10,
+                          th = .1)
+sum(colSums(metaweb) == 0) == sum(traits$role == "basal")
+metaweb[metaweb > 0] <- 1
+colnames(metaweb) <- traits$species
+rownames(metaweb) <- traits$species
+show_fw(colnames(metaweb), metaweb)
+```
+
+Draw random species for a local community of 30 species and impose sequentially the resource filtering and the limiting similarity filtering:
+
+```{r simulations}
+sp <- draw_random_species(30, colnames(metaweb))
+length(setdiff(sp, assembly:::.basals(metaweb)))
+sp_resource <- resource_filtering(sp, metaweb, keep.n.basal = TRUE)
+length(setdiff(sp_resource, assembly:::.basals(metaweb)))
+sp_limiting <- similarity_filtering(sp_resource, metaweb, t = 1e6, max.iter = 1e2)
+length(setdiff(sp_limiting, assembly:::.basals(metaweb)))
+
+show_graph(sp, metaweb, title = "Random")
+show_graph(sp_resource, metaweb, title = "Resource filtering")
+show_graph(sp_limiting, metaweb, title = "Limiting similarity")
+```
+
+Create and initialize the ATNr models:
+
+```{r atnr}
+nb_b <- length(setdiff(sp, assembly:::.basals(metaweb)))
+nb_s <- 30
+
+dyn_random <- create_model_Unscaled(nb_s, nb_b,
+                                    traits$masses[traits$species %in% sp],
+                                    metaweb[sp, sp])
+dyn_res <- create_model_Unscaled(nb_s, nb_b,
+                                 traits$masses[traits$species %in% sp_resource],
+                                 metaweb[sp_resource, sp_resource])
+dyn_lim <- create_model_Unscaled(nb_s, nb_b,
+                                 traits$masses[traits$species %in% sp_limiting],
+                                 metaweb[sp_limiting, sp_limiting])
+# default parameters
+initialise_default_Unscaled(dyn_random)
+initialise_default_Unscaled(dyn_res)
+initialise_default_Unscaled(dyn_lim)
+# initialize C++ fields
+dyn_random$initialisations()
+dyn_res$initialisations()
+dyn_lim$initialisations()
+```
+
+And call the solver to obtain the dynamics:
+
+```{r solver}
+times <- seq(1, 1e9, 1e7)
+
+sol_random <- lsoda_wrapper(times, traits$biomasses[traits$species %in% sp],
+                            dyn_random)
+sol_res <- lsoda_wrapper(times, traits$biomasses[traits$species %in% sp_resource],
+                         dyn_res)
+sol_lim <- lsoda_wrapper(times, traits$biomasses[traits$species %in% sp_limiting],
+                         dyn_lim)
+
+plot_odeweb(sol_random, nb_s)
+plot_odeweb(sol_res, nb_s)
+plot_odeweb(sol_lim, nb_s)
+```
+
+The number of extinct species can be extracted by:
+
+```{r extinctions}
+sum(sol_random[length(times), -1] < 1e-6)
+sum(sol_res[length(times), -1] < 1e-6)
+sum(sol_lim[length(times), -1] < 1e-6)
+```
+
+As well as the final total biomass of all consumers combined:
+
+```{r biomasses}
+sum(sol_random[length(times), (nb_b + 2) : nb_s])
+sum(sol_res[length(times), (nb_b + 2) : nb_s])
+sum(sol_lim[length(times), (nb_b + 2) : nb_s])
+```
+
 # References
