--- a/README.Rmd
+++ b/README.Rmd
@@ -9,6 +9,7 @@ bibliography: references.bib
 
 [![DOI](https://zenodo.org/badge/454057297.svg)](https://zenodo.org/badge/latestdoi/454057297)
 
+[![Codecov test coverage](https://codecov.io/gh/emilio-berti/assembly/branch/master/graph/badge.svg)](https://codecov.io/gh/emilio-berti/assembly?branch=master)
 <!-- badges: end -->
 
 
