--- a/README.Rmd
+++ b/README.Rmd
@@ -281,12 +281,52 @@ legend(x = 70, y = 130, fill = pal, legend = temps,
 
 # Filtering algorithms and modularity
 
-I implemented the hidden function `assembly:::.modules()` to return the number of modules of the food web. This uses the fast-greedy clustering algorithm of _igraph_:
+Jaccard similarity is often used to detect modules in community detection problems. The rationale is that similarity is high within modules and low between modules. This implies that the limiting similarity filtering, in its purely deterministic version ($t = 0$), it will converge to food webs that are highly modular, as this minimize the total Jaccard similarity of the network. This effect is more pronounced in sparser networks, that is in food webs with lower connectance.
 
-```{r modules}
-assembly:::.modules(sp, adirondack)
-assembly:::.modules(sp_resource, adirondack)
-assembly:::.modules(sp_sim, adirondack)
+To illustrate this, I generate 200 random networks based for five different connectance levels and calculate the average similarity of the network as well as its modularity metric:
+
+```{r modularity}
+REPS <- 200
+CONNECTANCE <- seq(.1, .3, by = .05)
+
+modularity <- matrix(rep(NA, REPS * length(CONNECTANCE)), nrow = REPS)
+similarity <- matrix(rep(NA, REPS * length(CONNECTANCE)), nrow = REPS)
+for (C in CONNECTANCE) {
+	for (rep in seq_len(REPS)) {
+		m <- matrix(as.numeric(runif(1e4) < C), 1e2, 1e2)
+		g <- graph_from_adjacency_matrix(m)
+		members <- membership(cluster_fast_greedy(as.undirected(g)))
+		modularity[rep, which (CONNECTANCE == C)] <- modularity(as.undirected(g), members)
+		sim <- similarity(g, mode = "in", method = "jaccard")
+		similarity[rep, which (CONNECTANCE == C)] <- mean(sim, na.rm = TRUE)
+	}
+}
+```
+
+```{r modularity-plot, fig.height=5, fig.width=6, out.width="80%", echo=FALSE}
+d <- data.frame(
+	ID = rep(seq_len(REPS), length(CONNECTANCE)),
+	Connectance = rep(CONNECTANCE, each = REPS),
+	Similarity = as.vector(similarity),
+	Modularity = as.vector(modularity)
+)
+
+pal <- colorRampPalette(c("steelblue", "goldenrod"))(length(CONNECTANCE))
+cols <- pal[sapply(d$Connectance, function(x) which(CONNECTANCE == x))]
+cols <- adjustcolor(cols, alpha.f = .2)
+plot(d$Modularity ~ d$Similarity,
+     xlab = "Average Jaccard similarity",
+     ylab = "Modularity coefficient",
+     col = cols, pch = 20, frame = FALSE)
+grid()
+for (C in CONNECTANCE) {
+  m <- lm(Modularity ~ Similarity, data = d[d$Connectance == C, ])
+  segments(x0 = min(m$model$Similarity),
+           x1 = max(m$model$Similarity),
+           y0 = m$coefficients[[1]] + m$coefficients[[2]] * min(m$model$Similarity),
+           y1 = m$coefficients[[1]] + m$coefficients[[2]] * max(m$model$Similarity),
+           lw = 3, col = "grey20")
+}
 ```
 
 # Integrating food web dynamics
